Changed some things